--- a/react/movie-front-end/tickets.com/package.json
+++ b/react/movie-front-end/tickets.com/package.json
@@ -9,8 +9,9 @@
     "bootstrap": "^5.1.3",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.18"
   },
